--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/jetstream": "^5.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
+        "realrashid/sweet-alert": "^7.1",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
